--- a/app.json
+++ b/app.json
@@ -34,7 +34,7 @@
       },
       "MUSIC_BOT_NAME": {
         "description": "A name for your Music Bot. You can use special characters bot ko jhaat farak ni padega",
-        "value": "ɪɴᴄʀɪᴄɪʙʟᴇ ダ ᴍᴜsɪᴄ",
+        "value": "Harshダ ᴍᴜsɪᴄ",
         "required": true
       },
       "OWNER_ID": {
