--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-    "name": "Harshダ ᴍᴜsɪᴄ",
+    "name": "ɪɴᴄʀɪᴄɪʙʟᴇ ダ ᴍᴜsɪᴄ",
     "description": "A Telegram Music Player Bot, written in Python with Pyrogram and Py-Tgcalls.",
-    "logo": "https://telegra.ph/file/56d1760224589ee370186.jpg",
+    "logo": "https://te.legra.ph/file/7cc6d77a976ea506629f1.jpg",
     "keywords": [
     "python3",
     "telegram",
@@ -34,7 +34,7 @@
       },
       "MUSIC_BOT_NAME": {
         "description": "A name for your Music Bot. You can use special characters bot ko jhaat farak ni padega",
-        "value": "Harshダ ᴍᴜsɪᴄ",
+        "value": "ɪɴᴄʀɪᴄɪʙʟᴇ ダ ᴍᴜsɪᴄ",
         "required": true
       },
       "OWNER_ID": {
@@ -75,4 +75,4 @@
           }
       ],
       "stack": "container"
-  }
+}
